[package]
name = "first_backend_wrust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
futures-util = "0.3.31"
hyper = { version = "1.6.0", features = ["full"] }
multipart = "0.18.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["full"] }

